<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_start_sync"
          android:title="@string/action_start_sync"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_stop_sync"
          android:title="@string/action_stop_sync"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_test"
          android:title="@string/action_test"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_signin"
          android:title="@string/action_signin"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          android:showAsAction="ifRoom" />
    
</menu>