<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center">
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@drawable/login_back">
			<ImageView android:id="@+id/faceImg" android:background="@drawable/and01"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<EditText android:id="@+id/userNameEditText"
				android:paddingLeft="75dip"
				android:saveEnabled="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="5dip"
				android:layout_marginTop="5dip" android:layout_marginRight="5dip"
				android:layout_marginBottom="5dip" android:hint="@string/strInputAccHint"
				android:layout_toRightOf="@+id/faceImg"
				android:layout_alignParentTop="true" />
			<TextView 
			    android:id="@+id/TextView01"
			    android:textSize="14dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical"
				android:paddingLeft="7dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15dip"
				android:text="@string/strAccInputLabel" 
				android:layout_alignLeft="@+id/userNameEditText"
				android:layout_alignTop="@+id/userNameEditText"
				android:layout_alignBottom="@+id/userNameEditText" />
			
			<EditText android:id="@+id/passwordEditText"
				android:paddingLeft="75dip"
				android:saveEnabled="true" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_below="@+id/userNameEditText"
				android:layout_alignLeft="@+id/userNameEditText"
				android:layout_alignRight="@+id/userNameEditText"
				android:hint="@string/strPswInputHint"
				android:inputType="textPassword"
				android:maxLength="10"  />
			<TextView 
			    android:id="@+id/TextView02"
			    android:textSize="14dip" 
			    android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" 
				android:paddingLeft="7dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/passwordEditText"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/passwordEditText" />
				
			<Button 
			    android:id="@+id/registerButton"
			    android:textSize="16dip" 
			    android:layout_marginTop="7dip"
			    android:layout_width="120dip" 
			    android:layout_height="42dip"
				android:layout_alignParentRight="true"
				android:layout_marginRight="152dip"
				android:text="@string/register" 
				android:layout_below="@+id/TextView02"
			/>
			<Button android:id="@+id/loginButton" android:layout_width="120dip"
				android:layout_height="42dip" android:layout_marginTop="7dip"
				android:layout_marginRight="30dip" android:text="@string/login"
				android:layout_below="@+id/TextView02" android:textSize="16dip"
				android:layout_alignParentRight="true" />
		</RelativeLayout>    
		
</RelativeLayout>

