<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/cb_task_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_task" />

    <Spinner
        android:id="@+id/list_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/priorities"
        android:prompt="@string/task_priority" />

	<ImageButton  android:id="@+id/task_edit" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_edit"
        android:src="@drawable/ic_content_edit"
        />

</LinearLayout>