<?xml version="1.0" encoding="utf-8"?>
<!-- 
task
priority
duration
start_time
finished?
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

<!--     <ImageView
        android:id="@+id/task_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/task_icon"
        android:src="@drawable/ic_launcher" 
        android:adjustViewBounds="true"
        android:maxWidth="50dip"
        android:maxHeight="50dip"
        /> -->

    <CheckBox android:id="@+id/task_isdone"         
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/task_title"
        android:layout_width="162sp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/task_isdone"
        android:textSize="18sp"
        android:singleLine="true"
        android:text="@string/title_task"/>

<!--     <TextView
        android:id="@+id/task_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/task_title"
        android:textSize="25sp"
        android:text="todo..." /> -->
        
        <Spinner android:id="@+id/task_priority"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/task_title"
        android:entries="@array/priorities"
        android:prompt="@string/task_priority"
        />
    <Button
        android:id="@+id/task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/task_priority"
        android:layout_alignParentRight="true"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/task_action" />
    
</RelativeLayout>
